<?xml version="1.0"?>
<package format="2">
  <name>descartes_parser</name>
  <version>0.1.0</version>
  <description>
    This package implements the serialization and deserialization of
descartes data. Currently it only supports ladder graph.
  </description>

  <maintainer email="yijiangh@mit.edu">Yijiang Huang</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>descartes_planner</depend>
  <depend>descartes_msgs</depend>

</package>